; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_ports.c_port_delete.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/extr_seq_ports.c_port_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_seq_client = type { i32 }
%struct.snd_seq_client_port = type { i32, %struct.TYPE_2__, %struct.TYPE_2__, i32, i32 (i32)*, i32 }
%struct.TYPE_2__ = type { i64 }

@SRC_LIST = common dso_local global i32 0, align 4
@DEST_LIST = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_seq_client*, %struct.snd_seq_client_port*)* @port_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @port_delete(%struct.snd_seq_client* %0, %struct.snd_seq_client_port* %1) #0 {
  %3 = alloca %struct.snd_seq_client*, align 8
  %4 = alloca %struct.snd_seq_client_port*, align 8
  store %struct.snd_seq_client* %0, %struct.snd_seq_client** %3, align 8
  store %struct.snd_seq_client_port* %1, %struct.snd_seq_client_port** %4, align 8
  %5 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %6 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %5, i32 0, i32 0
  store i32 1, i32* %6, align 8
  %7 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %8 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %7, i32 0, i32 5
  %9 = call i32 @snd_use_lock_sync(i32* %8)
  %10 = load %struct.snd_seq_client*, %struct.snd_seq_client** %3, align 8
  %11 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %12 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %13 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %12, i32 0, i32 2
  %14 = load i32, i32* @SRC_LIST, align 4
  %15 = call i32 @clear_subscriber_list(%struct.snd_seq_client* %10, %struct.snd_seq_client_port* %11, %struct.TYPE_2__* %13, i32 %14)
  %16 = load %struct.snd_seq_client*, %struct.snd_seq_client** %3, align 8
  %17 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %18 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %19 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %18, i32 0, i32 1
  %20 = load i32, i32* @DEST_LIST, align 4
  %21 = call i32 @clear_subscriber_list(%struct.snd_seq_client* %16, %struct.snd_seq_client_port* %17, %struct.TYPE_2__* %19, i32 %20)
  %22 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %23 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %22, i32 0, i32 4
  %24 = load i32 (i32)*, i32 (i32)** %23, align 8
  %25 = icmp ne i32 (i32)* %24, null
  br i1 %25, label %26, label %34

26:                                               ; preds = %2
  %27 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %28 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %27, i32 0, i32 4
  %29 = load i32 (i32)*, i32 (i32)** %28, align 8
  %30 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %31 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %30, i32 0, i32 3
  %32 = load i32, i32* %31, align 8
  %33 = call i32 %29(i32 %32)
  br label %34

34:                                               ; preds = %26, %2
  %35 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %36 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %35, i32 0, i32 2
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = icmp ne i64 %38, 0
  %40 = zext i1 %39 to i32
  %41 = call i32 @snd_BUG_ON(i32 %40)
  %42 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %43 = getelementptr inbounds %struct.snd_seq_client_port, %struct.snd_seq_client_port* %42, i32 0, i32 1
  %44 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %43, i32 0, i32 0
  %45 = load i64, i64* %44, align 8
  %46 = icmp ne i64 %45, 0
  %47 = zext i1 %46 to i32
  %48 = call i32 @snd_BUG_ON(i32 %47)
  %49 = load %struct.snd_seq_client_port*, %struct.snd_seq_client_port** %4, align 8
  %50 = call i32 @kfree(%struct.snd_seq_client_port* %49)
  ret i32 0
}

declare dso_local i32 @snd_use_lock_sync(i32*) #1

declare dso_local i32 @clear_subscriber_list(%struct.snd_seq_client*, %struct.snd_seq_client_port*, %struct.TYPE_2__*, i32) #1

declare dso_local i32 @snd_BUG_ON(i32) #1

declare dso_local i32 @kfree(%struct.snd_seq_client_port*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
